feature: get and delete files (#7)